styles.css
body {
  margin: 0;
  font-family: 'Roboto', sans-serif;
}

/* Header Section */
header {
  padding-top: 15px;
  padding-bottom: 100px;
  background-color: #1f2937;
}

.header-main {
  margin: auto;
  display: flex;
  flex-direction: column;
  gap: 100px;
  max-width: 1000px;
}

nav {
  display: flex;
  justify-content: space-between;
}

.nav-logo {
  font-size: 24px;
  font-weight: bold;
  color: #f9faf8;
}

nav ul {
  display: flex;
  margin: 0;
  list-style: none;
  padding: 0;
  gap: 16px;
}

a {
  font-size: 18px;
  color: #e5e7eb;
  text-decoration: none;
}

.header-container {
  display: flex;
  justify-content: space-between;
  color: #e5e7eb;
}

.text-container {
  display: flex;
  flex-flow: column wrap;
  width: 425px;
  gap: 10px;
}

.text-container > * {
  margin: 0;
}

.text-container h1 {
  color: #f9faf8;
  font-size: 48px;
  font-weight: 800;
}

.text-container p {
  font-size: 18px;
}

.header-button {
  color: #f9faf8;
  background-color: #3882f6;
  border: none;
  border-radius: 5px;
  font-weight: bold;
  height: 30px;
  width: 100px;
}

.img-container {
  background-color: grey;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 500px;
}

/* Card Section */
.card-section {
  padding-top: 15px;
  padding-bottom: 100px;
  margin: auto;
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  justify-content: center;
  gap: 20px;
  max-width: 1000px;
}

.card-header {
  font-size: 36px;
  font-weight: 800;
  color: #1f2937;
}

.card-container {
  color: #1f2937;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 75px;
}

.card {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  gap: 10px;
}

.card p {
  margin: 0;
  text-align: center;
  max-width: 150px;
}

.card-image {
  border: 5px solid #3882f6;
  border-radius: 10px;
  height: 150px;
  width: 150px;
}

/* Quote Section */
.quote-section {
  background-color: #e5e7eb;
  color: #1f2937;
  padding: 100px 0;
}

.quote-container {
  margin: auto;
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  max-width: 800px;
}

.quote {
  margin: 5px;
  font-size: 36px;
  font-weight: thin;
  text-align: left;
}

.author {
  align-self: flex-end;
  font-size: 20px;
  font-weight: bold;
}

/* Call To Action Section */
.action-section {
  padding: 75px 0;
}

.action-container {
  background-color: #3882f6;
  border-radius: 10px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: auto;
  max-width: 1000px;
  padding: 50px 0;
}

.action-text {
  color: #f9faf8;
}

.action-text p {
  margin: 5px;
  padding: 0;
}

.action-header {
  font-size: 24px;
  font-weight: bold;
}

.action-button {
  color: #f9faf8;
  background-color: #3882f6;
  border: 2px solid #f9faf8;
  border-radius: 10px;
  font-weight: bold;
  height: 40px;
  width: 125px;
}

footer {
  background-color: #1f2937;
  color: #e5e7eb;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 25px;
}

footer p {
  margin: 0;
}

footer a {
  text-decoration: underline;
}

